Fix sizes on mobile

--- a/index.css
+++ b/index.css
@@ -74,3 +74,17 @@ li:first-child {
 .email:hover {
     color: rgb(221, 93, 78);
 }
+
+@media (max-width: 768px) {
+    html,
+    body {
+        font-size: 6px;
+    }
+    ul {
+        margin-top: 2rem;
+    }
+    li {
+        font-size: 6rem;
+        margin-left: 4rem;
+    }
+}
